# LLM-Transcript-Council

./: .env.example  .gitignore  AGENTS.md  DESIGN.md  PRODUCT.md  README.md  app.py  package.json  pnpm-lock.yaml  pyproject.toml
.impeccable/live/: config.json
.impeccable/live/sessions/: 0449142b.jsonl  0449142b.snapshot.json  088d30c0.jsonl  088d30c0.snapshot.json  2343a52c.jsonl  2343a52c.snapshot.json  54530068.jsonl  54530068.snapshot.json
backend/: __init__.py  deps.py  main.py  schemas.py
backend/api/: _shared.py  analysis.py  edges.py  graph_runs.py  graphs.py  nodes.py  projects.py
council/: __init__.py  analysis.py  db.py  elo.py  files.py  generation.py  graph_runtime.py  graph_spec.py  graphs.py  jobs.py  json_tools.py  judge.py  judging.py  leaderboard.py  models.py  openrouter.py  reports.py  run_rows.py  run_state.py  runner.py
frontend/: README.md  index.html  package.json  vite.config.ts
frontend/src/: app.tsx  main.tsx
prompts/generators/: demo_payment_coaching_json.md  example_prompt.md
prompts/judges/: default_pairwise.md  demo_payment_coaching_pairwise.md
prompts/tasks/: demo_payment_coaching_task.md  example_task.md
scripts/: repo_health.py
static/: app.css  app.js
studio/: Unsloth_Studio_Colab.ipynb
tests/: test_api.py  test_elo.py  test_files.py  test_graphs.py  test_judge.py  test_repo_health.py  test_runner.py
transcripts/: example_call.md
transcripts/demo_payment_coaching/: call_01.md  call_02.md  call_03.md  call_04.md  call_05.md  call_06.md  call_07.md  call_08.md  call_09.md  call_10.md
(+28 files in other folders)
