[project]
name = "LLM-Transcript-Council"
version = "0.1.0"
description = "Local LLM-as-judge framework for transcript evaluation with pairwise judging and ELO rankings."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "python-dotenv>=1.0.1",
    "python-fasthtml>=0.12.0",
    "sqlmodel>=0.0.22",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
repair = [
    "json-repair>=0.30.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
