[project]
name = "LLM-Transcript-Council"
version = "0.1.0"
description = "Local LLM-as-judge framework for transcript evaluation with pairwise judging and ELO rankings."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.1",
    "httpx>=0.27.0",
    "pydantic>=2.13.3",
    "python-dotenv>=1.0.1",
    "python-fasthtml>=0.12.0",
    "sqlmodel>=0.0.22",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
repair = [
    "json-repair>=0.30.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
